--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "react": "^16.8.0-alpha.1",
     "react-dom": "^16.8.0-alpha.1",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "lodash": "^4.17.11"
   },
   "scripts": {
     "start": "react-scripts start",
