--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "jest-dom": "^3.0.2",
+    "lodash": "^4.17.11",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-scripts": "2.1.3",
-    "lodash": "^4.17.11"
+    "react-testing-library": "^5.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -23,5 +25,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {}
 }
